Improved fav pics. Added support for videos.

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -100,6 +100,11 @@
 @import './modules-channel/channel-playlist';
 
 /**
-* Channel playlist
+* Channel mobile
 */
 @import './modules-channel/channel-mobile';
+
+/**
+* Channel favourite pictures
+*/
+@import './modules-channel/channel-fav-pics';
