Basic image upload module. First version.

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -21,6 +21,7 @@
 @import './modules-build/chat-history';
 @import './modules-build/favourite-pictures';
 @import './modules-build/smiles';
+@import './modules-build/image-upload';
 
 /**
  * MOTD
